--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -14,7 +14,7 @@
 
 <div class="image-background"></div>
 <div class="container contained tree-details">
-  <div class="row">
+  <div class="row-fluid">
     <div class="span3">
       {% with photo=tree.most_recent_photo %}
       {% if photo %}
