--- a/opentreemap/treemap/templates/treemap/recent_edits.html
+++ b/opentreemap/treemap/templates/treemap/recent_edits.html
@@ -19,7 +19,7 @@
 {% block content %}
 <div class="image-background"></div>
 <div class="container contained profile">
-  <div class="row">
+  <div class="row-fluid">
     <div class="span12">
       <h1>
         {% trans "Recent Edits" %}
