--- a/opentreemap/treemap/templates/treemap/user.html
+++ b/opentreemap/treemap/templates/treemap/user.html
@@ -20,7 +20,7 @@
 {% load i18n %}
 <div class="image-background"></div>
 <div class="container contained profile">
-    <div class="row">
+    <div class="row-fluid">
         <div class="span4">
             <div class="account-info">
                 <img class="img-circle img-polaroid user-photo" src="{{STATIC_URL}}img/profile.jpg">
