--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -176,8 +176,9 @@
 
       var updateUrl = window.location.href;
       var U = require('utility');
-      if (U.endsWith(updateUrl, '/edit')) {
-            updateUrl = updateUrl.substring(0, updateUrl.length - '/edit'.length);
+
+      if (U.getLastUrlSegment(updateUrl) == 'edit') {
+            updateUrl = U.removeLastUrlSegment(updateUrl);
       }
 
       plot.init({
