Update eco benefits on save. Fixes #396

--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -131,25 +131,9 @@
 
         <hr>
 
-      <!-- Yearly Ecosystem Services -->
-      <h5>{% trans "Yearly Ecosystem Services" %}</h5>
-      {% if benefits %}
-      <table class="table table-striped">
-        <tbody>
-        {% for benefit in benefits %}
-          <tr>
-            <td>{{ benefit.label }}</td>
-            <td>{{ benefit.value }} {{ benefit.unit}}</td>
-            <td>{{ currency_symbol }}{{ benefit.currency_saved }}</td>
-          </tr>
-        {% endfor %}
-        </tbody>
-      </table>
-      {% else %}
-      <div>
-        {% trans "Add the diameter of the tree and select a species to calculate the yearly ecosystem services." %}
-      </div>
-      {% endif %}
+        <div id="ecobenefits">
+        {% include "treemap/partials/plot_eco.html" with benefits=benefits %}
+        </div>
     </div>
     <div class="span3">
       <h3>{% trans "Commments" %}</h3>
@@ -181,9 +165,13 @@
             updateUrl = U.removeLastUrlSegment(updateUrl);
       }
 
+      var updateEcoUrl = U.appendSegmentToUrl('eco', updateUrl);
+
       plot.init({
           config: config,
           startInEditMode: {% if editmode %}true{% else %}false{% endif %},
+          updateEcoUrl: updateEcoUrl,
+          ecoBenefits: '#ecobenefits',
           inlineEditForm: {
               updateUrl: updateUrl,
               form: '#plot-form',
