Simple add tree styling

--- a/opentreemap/treemap/css/sass/partials/_navbar.scss
+++ b/opentreemap/treemap/css/sass/partials/_navbar.scss
@@ -48,6 +48,8 @@
                 a {
                     padding: 0;
                     height: auto;
+                    overflow: hidden;
+                    border-radius: 4px;
                 }
                 img {
                     max-width: 105%;
