--- a/opentreemap/treemap/templates/treemap/map-add-tree.html
+++ b/opentreemap/treemap/templates/treemap/map-add-tree.html
@@ -2,17 +2,17 @@
 {% load form_extras %}
 {% load i18n %}
 <div class="sidebar-inner">
+    <a href="javascript:;" class="close cancelBtn small">&times;</a>
     <h3>{% trans "Add a Tree" %}</h3>
-    <a href="javascript:;" class="close cancelBtn">&times;</a>
-
     <h4>1. {% trans "Set the tree’s location" %}</h4>
-    <div>{% trans "Search by address or use your current location, then drag the marker to the correct location. Or click the map." %}</div>
-    <input type="text" id="add-tree-address" placeholder="{% trans "340 N 12th St, Philadelphia" %}">
-    <a href="javascript:;" class="btn geocode">{% trans "Search" %}</a>
-    <div class="text-error geocode-error" style="display: none;">{% trans "Unable to locate address in this region" %}</div>
-    <br>
-    <a href="javascript:;" class="btn geolocate">Use current location</a>
-    <div class="text-error geolocate-error" style="display: none;">{% trans "Unable to determine current location" %}</div>
+    <small>{% trans "Search by address or use your current location, then drag the marker to the correct location. Or click the map." %}</small>
+    <form class="form-search">
+        <input type="text" class="search-query" id="add-tree-address" placeholder="{% trans "340 N 12th St, Philadelphia" %}">
+        <a href="javascript:;" class="btn geocode">{% trans "Search" %}</a>
+    </form>
+    <a href="javascript:;" class="geolocate"><i class="icon-direction"></i> Use Current Location</a>
+    <div class="alert alert-error text-error geocode-error" style="display: none;">{% trans "Unable to locate address in this region" %}</div>
+    <div class="alert alert-error text-error geolocate-error" style="display: none;">{% trans "Unable to determine current location" %}</div>
 
     <h4>2. {% trans "Additional information" %}</h4>
     <form id="add-tree-form">
