Add and style error pages, fixes #311

--- a/opentreemap/treemap/css/sass/_base.scss
+++ b/opentreemap/treemap/css/sass/_base.scss
@@ -21,3 +21,4 @@ $light-gray-color		: #f1f2f2; // Light gray color
 @import "modules/animations";
 @import "modules/links";
 @import "modules/buttons";
+@import "modules/misc";
