Fix regression introduced in cf745d87a. Fixes #504.
Buttons that had previously been anchors were changed to button
tags. That caused them to trigger the form actions, resulting is page
reloads.

Since forms are mostly stylistic, we've moved the buttons outside of
them.

--- a/opentreemap/treemap/templates/treemap/user.html
+++ b/opentreemap/treemap/templates/treemap/user.html
@@ -42,7 +42,7 @@
                     {% endfor %}
                     <ul class="chunk" data-class="display">
                         <li class="chunk-label">{% trans "Password" %}</li>
-                        <li class="chunk-content"><button>{% trans "Reset" %}</button></li>
+                        <li class="chunk-content"><a href="javascript:;">{% trans "Reset" %}</a></li>
                     </ul>
                     <ul class="chunk">
                         <li class="chunk-label">{% trans "Emails" %}</li>
@@ -93,12 +93,12 @@
             cancel: '#cancel-edit',
             displayFields: '[data-class="display"]',
             editFields: '[data-class="edit"]',
-            validationFields: '[data-class="error"]'    
+            validationFields: '[data-class="error"]'
         },
         recentEdits: {
             recentEditsContainer: '#recent-user-edits-container',
             prevLink: '#recent-user-edits-prev',
-            nextLink: '#recent-user-edits-next',    
+            nextLink: '#recent-user-edits-next',
         }
     });
 })(require);
