--- a/opentreemap/treemap/css/sass/partials/_error.scss
+++ b/opentreemap/treemap/css/sass/partials/_error.scss
@@ -8,6 +8,11 @@
     width: 540px;
     margin: 30px auto 15px;
 
+    @media screen and (max-width: 767px) {
+        width: auto;
+        margin: 30px 20px 15px;
+    }
+
     h2, h3 {
     	text-align: center;
     }
