Add exporter interface for celery jobs

--- a/opentreemap/treemap/templates/base.html
+++ b/opentreemap/treemap/templates/base.html
@@ -98,6 +98,9 @@
       {% block subhead %}
       {% endblock subhead %}
 
+      {% block export %}
+      {% endblock export %}
+
       {% block content %}
       {% endblock content %}
 
@@ -132,8 +135,12 @@
 
     {% block scripts %}
     {% endblock scripts %}
+
     {% block searchscripts %}
     {% endblock searchscripts %}
+
+    {% block exportscript %}
+    {% endblock exportscript %}
 
     {% block endbody %}
     {% endblock endbody %}
