--- a/opentreemap/treemap/templates/treemap/field/ul.html
+++ b/opentreemap/treemap/templates/treemap/field/ul.html
@@ -1,16 +1,16 @@
 {% if field.is_visible %}
     <label>{{ field.label }}</label>
-    <div class="chunk-content"
+    <div class="field-view"
         {% include "treemap/field/attrs.html" with class="display" %}>
         {{ field.display_value }}
     </div>
     {% if field.is_editable %}
-        <div class="chunk-content"
+        <div class="field-edit"
             style="display: none;"
             {% include "treemap/field/attrs.html" with class="edit" %}>
             {% include "treemap/field/inputs.html" %}
         </div>
-        <div class="chunk-content text-error"
+        <div class="alert alert-error text-error"
             style="display: none;"
             {% include "treemap/field/attrs.html" with class="error" %}>
         </div>
