Add support for custom units
* Add settings for units and decimal digits to settings.py
* "inputs.html" template doesn't assume a blank choice -- "choice" UDF adds its own blank choice
* A "Choice" field option's value can differ from its display_value

--- a/opentreemap/treemap/css/sass/partials/_admin.scss
+++ b/opentreemap/treemap/css/sass/partials/_admin.scss
@@ -139,3 +139,14 @@ $nav-width: 200px;
 .error-on-tab {
         border-bottom: 8px solid red;
 }
+
+/* Units tables ---------------------- */
+
+table.units th {
+  padding: 5px 15px 0 0;
+  text-align: left;
+}
+
+table.units td {
+  padding: 5px 15px 0 0;
+}
