--- a/opentreemap/treemap/templates/treemap/user.html
+++ b/opentreemap/treemap/templates/treemap/user.html
@@ -7,6 +7,13 @@
 {% block subhead %}
 {% endblock subhead %}
 
+{% block activeexplore %}
+{% endblock %}
+
+{% block activeuser %}
+active
+{% endblock %}
+
 {% block header %}
 {% load i18n %}
 <div class="header">
