--- a/opentreemap/treemap/templates/base.html
+++ b/opentreemap/treemap/templates/base.html
@@ -96,11 +96,15 @@
     <footer>
       <div class="footer-inner">
         <ul class="inline pull-left">
-          <li><a href="javascript:;">{% trans "Tree Key" %}</a></li>
+          {% with linkData=request.instance.config.linkData %}
+          <li><a href="{% if linkData.treekey %}{{ linkData.treekey }}{% else %}http://www.arborday.org/trees/whatTree/{% endif %}">{% trans "Tree Key" %}</a></li>
           <li><a href="javascript:;">{% trans "Resources" %}</a></li>
           <li><a href="javascript:;">{% trans "FAQ" %}</a></li>
           <li><a href="javascript:;">{% trans "About" %}</a></li>
-          <li><a href="javascript:;">{% trans "Contact" %}</a></li>
+          {% if linkData.contact %}
+          <li><a href="mailto:{{ linkData.contact }}">{% trans "Contact" %}</a></li>
+          {% endif %}
+          {% endwith %}
         </ul>
         <a href="javascript:;" class="pull-right partners">Partners</a>
       </div>
