--- a/opentreemap/treemap/templates/treemap/map-add-tree.html
+++ b/opentreemap/treemap/templates/treemap/map-add-tree.html
@@ -10,7 +10,7 @@
         <input type="text" class="search-query" id="add-tree-address" placeholder="{% trans "340 N 12th St, Philadelphia" %}">
     </form>
     <button class="btn geocode">{% trans "Search" %}</button>
-    <button class="geolocate"><i class="icon-direction"></i> Use Current Location</a>
+    <button class="geolocate"><i class="icon-direction"></i> Use Current Location</button>
     <div class="alert alert-error text-error geocode-error" style="display: none;">{% trans "Unable to locate address in this region" %}</div>
     <div class="alert alert-error text-error geolocate-error" style="display: none;">{% trans "Unable to determine current location" %}</div>
 
