Pull in scripts based on protocol
Also uses https for a few a outbound links.

--- a/opentreemap/treemap/templates/treemap/field/diameter_tr.html
+++ b/opentreemap/treemap/templates/treemap/field/diameter_tr.html
@@ -43,7 +43,7 @@
                 </tr>
               </tbody>
             </table>
-            <a href="http://player.vimeo.com/video/11119129" target="_blank">measuring multiple trunks?</a>
+            <a href="//player.vimeo.com/video/11119129" target="_blank">measuring multiple trunks?</a>
           </div>
 
 
@@ -55,4 +55,3 @@
   {% endif %}
   </tr>
 {% endif %}
-
