--- a/opentreemap/treemap/templates/treemap/map.html
+++ b/opentreemap/treemap/templates/treemap/map.html
@@ -7,7 +7,7 @@
 {% endblock head_extra %}
 
 {% block searchscripts %}
-<script src="http://maps.google.com/maps/api/js?v=3&sensor=false"></script>
+<script src="//maps.google.com/maps/api/js?v=3&sensor=false"></script>
 <script>
 (function(require) {
     var $ = require("jquery"),
