--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -170,7 +170,7 @@
 </div>
 {% endblock content %}
 {% block scripts %}
-<script src="http://maps.google.com/maps/api/js?v=3&sensor=false"></script>
+<script src="//maps.google.com/maps/api/js?v=3&sensor=false"></script>
 <script>
 (function(require, config) {
       var plot = require('plot');
