Minor styling updates to management page

--- a/opentreemap/treemap/css/sass/partials/_admin.scss
+++ b/opentreemap/treemap/css/sass/partials/_admin.scss
@@ -60,8 +60,9 @@
         top: 4px;
         position: relative;
     }
-    .field-edit {
-
+    
+    .tab-content {
+        overflow: hidden;
     }
 }
 
