--- a/opentreemap/treemap/templates/treemap/map-add-tree.html
+++ b/opentreemap/treemap/templates/treemap/map-add-tree.html
@@ -19,6 +19,8 @@
         {# The "add-tree-species" label is used as an id prefix in "species_ul.html" #}
         {% create "add-tree-species" from "tree.species" withtemplate "treemap/field/species_ul.html" %}
 
+        {% create "add-tree-diameter" from "tree.diameter" withtemplate "treemap/field/diameter_ul.html" %}
+
         {% for label, identifier in fields_for_add_tree %}
             {% create label from identifier withtemplate "treemap/field/ul.html" %}
         {% endfor %}
