Use custom units and digits in field display and editing
* Add helper functions to units.py
* Make sure plot & tree fields have "in request.instance" so they'll use custom units and digits
* Format display values client-side on form save (digits, units)
* Display eco benefits values using configured units and digits.
* ignore .orig files (generated by kdiff3) and extracollect.py
* Fix inline field tag tests
* Add tests for custom units and digits
* Fixes #330, #371, #458

--- a/opentreemap/treemap/templates/treemap/field/attrs.html
+++ b/opentreemap/treemap/templates/treemap/field/attrs.html
@@ -2,3 +2,5 @@ data-field="{{ field.identifier }}"
 data-class="{{ class }}"
 data-value="{{ field.value|default_if_none:"" }}"
 data-type="{{ field.data_type }}"
+data-units="{{ field.units }}"
+data-digits="{{ field.digits }}"
