--- a/opentreemap/treemap/templates/treemap/field/diameter_ul.html
+++ b/opentreemap/treemap/templates/treemap/field/diameter_ul.html
@@ -1,7 +1,7 @@
 {% extends "treemap/field/ul.html" %}
 {% load i18n %}
 
-{% block label %}{% trans "Trunk Diameter (inches)" %}{% endblock %}
+{% block label %}{% trans "Trunk Diameter" %}{% endblock %}
 
 {% block inputs %}
   {% include "treemap/field/inputs.html" with extra='readonly=readonly' %}
