--- a/opentreemap/treemap/templates/treemap/map-add-tree.html
+++ b/opentreemap/treemap/templates/treemap/map-add-tree.html
@@ -20,11 +20,11 @@
         {% create "add-tree-species" from "tree.species" withtemplate "treemap/field/species_ul.html" %}
 
       {% with hide_multiple_trunks=True %}
-        {% create "add-tree-diameter" from "tree.diameter" withtemplate "treemap/field/diameter_ul.html" %}
+        {% create "add-tree-diameter" from "tree.diameter" in request.instance withtemplate "treemap/field/diameter_ul.html" %}
       {% endwith %}
 
         {% for label, identifier in fields_for_add_tree %}
-            {% create label from identifier withtemplate "treemap/field/ul.html" %}
+            {% create label from identifier in request.instance withtemplate "treemap/field/ul.html" %}
         {% endfor %}
     </form>
 
