--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -163,7 +163,7 @@
       <div id="map" class="map-small"></div>
       <div id="street-view" class="street-view-small" style="display: none;"></div>
 
-      <h3>{% trans "Commments" %}</h3>
+      <h3>{% trans "Comments" %}</h3>
       {% if request.user.is_authenticated %}
         <form>
           <textarea rows=8></textarea><br>
