Link static pages (FAQ, About, Resources). Fixes #409.
They all link to a blank screen right now. The goal is to provide
content by default for all of these and allow the users to be able to
customize it for each map.

--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -99,6 +99,23 @@
 </script>
 {% endblock searchscripts %}
 
+{% block footer %}
+<div class="footer-inner">
+  <ul class="inline pull-left">
+    {% with linkData=request.instance|instance_config:"linkData" %}
+    <li><a href="{% if linkData.treekey %}{{ linkData.treekey }}{% else %}http://www.arborday.org/trees/whatTree/{% endif %}">{% trans "Tree Key" %}</a></li>
+    <li><a href="{% url 'static_page' instance_url_name=request.instance.url_name page='Resources' %}">{% trans "Resources" %}</a></li>
+    <li><a href="{% url 'static_page' instance_url_name=request.instance.url_name page='FAQ' %}">{% trans "FAQ" %}</a></li>
+    <li><a href="{% url 'static_page' instance_url_name=request.instance.url_name page='About' %}">{% trans "About" %}</a></li>
+    {% if linkData.contact %}
+    <li><a href="mailto:{{ linkData.contact }}">{% trans "Contact" %}</a></li>
+    {% endif %}
+    {% endwith %}
+  </ul>
+  <a href="javascript:;" class="pull-right partners">Partners</a>
+</div>
+{% endblock footer %}
+
 {% block templates %}
 {% verbatim %}
 <script id="species-element-template" type="text/x-mustache-template">
