--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -51,6 +51,7 @@
   <div class="search-block visible-desktop">
     <h3>{% trans "Search by Species" %}</h3>
     <div class="search-field-group">
+      <a class="btn" id="species-toggle"><i class="icon-menu"></i></a>
       <input type="text" data-class="search" id="species-typeahead" placeholder="American basswood"/>
       <input name="species.id" data-search-type="IS" type="hidden" id="search-species" />
     </div>
@@ -60,6 +61,7 @@
   <div class="search-block">
     <h3>{% trans "Search by Location" %}</h3>
     <div class="search-field-group">
+      <a class="btn" id="boundary-toggle"><i class="icon-menu"></i></a>
       <input type="text" data-class="search" id="boundary-typeahead" placeholder="340 N 12th St, Philadelphia"/>
       <input name="plot.geom" data-search-type="IN_BOUNDARY" type="hidden" id="boundary" />
     </div>
